[package]
name = "redis-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
lazy_static = "1"
clap = "2"
shellwords = "1.1"
derive_more = "0.99.17"
redis = { version = "0.24.0", features = ["tokio-comp", "bytes", "connection-manager"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
log = "0.4.20"
indicatif = { version = "0.17.7", features = ["tokio"] }
